# esp-phenobottle

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
components/b64/: CMakeLists.txt
components/cat9555/: CMakeLists.txt  cat9555.c  cat9555.h
components/sht3x/: CMakeLists.txt  sht3x.c  sht3x.h
main/: CMakeLists.txt  Kconfig.projbuild  https_request_example_main.c  idf_component.yml  time_sync.c
main/include/: camera.h  client.h  endpoints.h  http_status_codes.h  i2c_user.h  interval_task.h  measurement.h  ringbuffer.h  stats.h  task_manager.h  tasks.h  temp_sensor.h  timer.h
main/include/sensors/: gas_sensor.h  od_sensor.h
main/include/tasks/: illumination.h  mixing.h
main/src/: camera.c  client.c  i2c_user.c  interval_task.c  main.c  measurement.c  ringbuffer.c  stats.c  task_manager.c  temp.c  timer.c
main/src/sensors/: camera.c  gas_sensor.c  od_sensor.c  temp_sensor.c
main/src/tasks/: illumination.c  mixing.c
tools/upload-server/: app.js  package-lock.json  package.json  readme.md
